import VoucherSectionTitleTestCases from "../VoucherSectionTitleTestCases";
import testRunner from "../../../../../Services/testRunner/testRunner";

VoucherSectionTitleTestCases.map(testRunner);
